# home-lab-manager

./: README.md
backend/: .env  .gitignore  Cargo.toml  schema.sql.md
backend/migrations/: 20260517080221_create_users_table.sql  20260706012517_create_academy_tables.sql  20260706013954_create_lab_engine_tables.sql  20260706014523_add_role_to_users.sql  20260706014546_add_total_score_to_users.sql  20260715000000_admin_operations.sql  20260715010000_score_and_lab_policy.sql
backend/src/: main.rs
backend/src/db/: ctf_repo.rs  user_repo.rs
backend/src/errors/: app_error.rs  mod.rs
backend/src/handlers/: academy_admin_handler.rs  academy_handler.rs  admin_handler.rs  auth_handler.rs  chat_handler.rs  dashboard_handler.rs  lab_handler.rs  mod.rs  profile_handler.rs  task_progress_handler.rs  terminal_handler.rs  user_handler.rs
backend/src/middleware/: admin_middleware.rs  auth_middleware.rs  mod.rs
backend/src/models/: lab_models.rs  mod.rs  user.rs
backend/src/repositories/: academy_repo.rs  admin_repo.rs  ctf_repo.rs  dashboard_repo.rs  environment_repo.rs  instance_repo.rs  mod.rs  profile_repo.rs  scenario_repo.rs  task_progress_repo.rs  task_repo.rs  user_repo.rs
backend/src/routes/: academy_routes.rs  admin_routes.rs  auth.rs  dashboard_routes.rs  lab_routes.rs  mod.rs  profile_routes.rs  task_progress_routes.rs  user_routes.rs
backend/src/services/: academy_service.rs  admin_service.rs  auth_service.rs  dashboard_service.rs  instance_service.rs  lab_service.rs  mod.rs  profile_service.rs  task_progress_service.rs  user_service.rs
docs/: API.md  (+8 more)
(+137 files in other folders)
